2004-05-08  Derek Price  <derek@ximbiot.com>

	* server.c: Gratuitous reformatting.  Remove unnecessary prototype &
	unnecessary type cast.

2004-05-05  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Wait a second and retry if cvs-serv* directories are
	discovered to avoid race conditions on some systems.
	(Patch from Pavel Roskin <proski@gnu.org>.)

2004-05-05  Derek Price  <derek@ximbiot.com>

	* commit.c: Some gratuitous reformatting.

2004-05-04  Derek Price  <derek@ximbiot.com>

	* update.c: Some gratuitous reformatting.

2004-05-04  Derek Price  <derek@ximbiot.com>

	* add.c (add): Remove obsolete FIXME comment.
	(*): Some gratuitous reformatting.

2004-05-03  Derek Price  <derek@ximbiot.com>

	* src/sanity.sh (branches2-14-ls-4): Change expectations due to new -d
	flag.

2004-05-02  Derek Price  <derek@ximbiot.com>

	* sanity.sh (ls): Add some new tests of ls -d flag.
	(Original patch from Alexander Taler <dissent@cvshome.org>.)

	* ls.c (ls): Accept -d to show dead files.
	(ls_proc): Add W_ATTIC to start_recursion flags when user requests dead
	files.
	(ls_fileproc): Don't show dead files with -d.  Print "dead" in long
	listings for dead files.

2004-05-02  Derek Price  <derek@ximbiot.com>

	* ls.c (ls_dirleaveproc): Return err.
	(Original patch from Mark D. Baushke <mdb@cvshome.org>.)

2004-05-02  Derek Price  <derek@ximbiot.com>

	* ls.c (ls_print): Return 0.
	(Patch from Mark D. Baushke <mdb@cvshome.org>.)

2004-04-30  Derek Price  <derek@ximbiot.com>

	* tag.c (tag_check_valid): Treat a NULL repository the same as an empty
	one.
	* sanity.sh (branches2-ls-7): Verify absence of assertion failure.

2004-04-29  Derek Price  <derek@ximbiot.com>

	* sanity.sh (branches2-rls-1): Reformat comment.

2004-04-28  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rcs2-5): Update to cope with new getdate.y.

2004-04-28  Derek Price  <derek@ximbiot.com>

	* Makefile.am (cvs_LIBADD): Use libs for nanosleep & clock_gettime when
	necessary.